--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,12 +1,16 @@
 {
-    "version" : 1,
-    "name" : "elda",
-    "builds" : [
+    "version": 1,
+    "name": "elda",
+    "builds": [
         {
             "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
-    "routes": "/(.*)",
-    "dest": "/"
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/"
+        }
+    ]
 }
